--- a/magazine.css
+++ b/magazine.css
@@ -103,3 +103,12 @@ body {
 	background: silver;
 }
 
+
+
+.unanimated {
+	-webkit-transition: none;
+	-moz-transition: none;
+	-o-transition: all 0 ease;
+	-ms-transition: none;	
+	transition: none;
+}
