updated scaling still a bit buggy, need to figure out a way to do this cleanly via CSS...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/magazine.css
+++ b/magazine.css
@@ -38,6 +38,10 @@ body {
 	width: 800px;
 	height: 600px;
 
+	top: 50%;
+	/* change to relative units... */
+	margin-top: -300px;
+
 	border: solid red 1px;
 }
 
