added splash screen...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/layout.css
+++ b/layout.css
@@ -6,6 +6,7 @@
 }
 
 .animated, 
+.splash,
 .content,
 .section,
 .button,
@@ -17,6 +18,7 @@
 	-ms-transition: all 0.2s ease;	
 	transition: all 0.2s ease;
 }
+
 
 body {
 	text-align: center;
