--- a/magazine.css
+++ b/magazine.css
@@ -173,6 +173,22 @@ body {
 	margin-right: 20px;
 }
 
+.splash {
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9000;
+
+	background-color: white;
+}
+
+.splash * {
+	color: gray;
+}
+
+
 /* modes */
 .page-view-mode.viewer {
 }
