--- a/magazine.css
+++ b/magazine.css
@@ -43,6 +43,7 @@ body {
 	text-align: left;
 	position: relative;
 	overflow: visible;
+	white-space: normal;
 
 	/* these set the "safe" marks for page content */
 	width: 800px;
