--- a/magazine.css
+++ b/magazine.css
@@ -271,6 +271,33 @@ body {
 }
 
 
+/* templates */
+.caption {
+	display: block;
+	position: absolute;
+	height: 100px;
+	width: 100%;
+	bottom: 0px;
+	left: 0px;
+
+	padding: 15px;
+	color: white;
+	background: black;
+	opacity: 0.5;
+	-webkit-transition: all 0.2s ease;
+	-moz-transition: all 0.2s ease;
+	-o-transition: all 0.2s ease;
+	-ms-transition: all 0.2s ease;	
+	transition: all 0.2s ease;
+}
+.caption.hidden {
+	opacity: 0;
+	height: 0px;
+}
+.caption.shown {
+	opacity: 0.8;
+}
+
 
 
 /* keep this at the end... */
