--- a/magazine-custom.css
+++ b/magazine-custom.css
@@ -1,5 +1,10 @@
-/* magazine customization */
-.magazine {
+/**********************************************************************
+* magazine customization 
+*
+**********************************************************************/
+
+/*************************************** main structural elements ****/
+.viewer {
 	background: gray;
 }
 
@@ -14,3 +19,10 @@
 .page {
 	background: silver;
 }
+
+
+/*********************************************************************/
+
+
+
+/*********************************************************************/
