added stub demo...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/magazine-custom.css
+++ b/magazine-custom.css
@@ -18,10 +18,24 @@
 
 .page {
 	background: silver;
+
+	font-family: Arial;
 }
 
 
 /*********************************************************************/
+body {
+	font-family: arial;
+}
+
+.page a, 
+.page a:visited, 
+.page a:active {
+	color: blue;
+}
+.page a:hover {
+	color: red;
+}
 
 
 
