--- a/magazine.css
+++ b/magazine.css
@@ -449,6 +449,17 @@ body {
 
 
 /******************************************************* templates ***/
+
+.page-number-text {
+	position: absolute; 
+	bottom: 10px; 
+	right: 10px;
+	text-align: right;
+
+	color: gray;
+}
+
+
 /* XXX split these into seporate files... */
 .caption {
 	display: block;
