added page-sets (still not fully deserializable) and fixed a bug in the CSS layout...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/magazine-custom.css
+++ b/magazine-custom.css
@@ -8,11 +8,11 @@
 	background: gray;
 }
 
-.magazine > .cover {
+.magazine .cover {
 	background: white;
 }
 
-.article > .cover {
+.article .cover {
 	background: white;
 }
 
