added shadow toggler button for testing...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/magazine-themes.css
+++ b/magazine-themes.css
@@ -262,3 +262,13 @@
 
 
 /*********************************************************************/
+
+.shadowless.viewer .magazine,
+.shadowless.viewer .top-toolbar,
+.shadowless.viewer .bottom-toolbar {
+	box-shadow: none;
+}
+
+
+
+/*********************************************************************/
