--- a/magazine-custom.css
+++ b/magazine-custom.css
@@ -5,44 +5,30 @@
 
 /*************************************** main structural elements ****/
 
-.viewer {
-	background: gray;
-}
-
 .magazine {
-	background: transparent;
 }
 
 .magazine .cover {
 }
 
 .article {
-	background: transparent;
 }
 
 .article .cover {
 }
 
 .page {
-	background: silver;
-
-	font-family: Arial;
+}
+.page .content {
 }
 
 .cover {
-	background: white;
 }
 
 
-.top-toolbar, .bottom-toolbar {
-	font-size: 14px;
-	color: silver;
-}
 
-.top-toolbar .title,
-.bottom-toolbar .title {
-	font-size: 40px;
-}
+/**************************************************** UI elements ****/
+/* NOTE: these may override themes... */
 
 /* toolbar links */
 .top-toolbar a, .bottom-toolbar a {
@@ -51,6 +37,7 @@
 }
 
 .button {
+	color: silver;
 	font-size: 25px;
 	font-weight: bold;
 	cursor: hand;
@@ -86,65 +73,21 @@
 
 
 
-/**************************************************** light theme ****/
-
-.light {
-	color: gray;
-	background: white;
-}
-
-.light.viewer {
-}
+/*********************************************************** sizes ***/
 
 .magazine {
+	/*
+	height: auto;
+	margin-top: -300px;
+	*/
 }
 
-.light .magazine .cover {
+.page .content {
+	/*
+	width: 800px;
+	height: 600px;
+	*/
 }
-
-.light .article .cover {
-}
-
-.light .page {
-}
-
-
-
-/**************************************************** dark theme ****/
-
-.dark {
-	color: white;
-	background: black;
-}
-
-.dark.viewer {
-}
-
-.dark .magazine .cover {
-}
-
-.dark .article .cover {
-}
-
-.dark .page {
-}
-
-
-/*********************************************************************/
-
-body {
-	font-family: arial;
-}
-
-.page a, 
-.page a:visited, 
-.page a:active {
-	color: blue;
-}
-.page a:hover {
-	color: red;
-}
-
 
 
 /*********************************************************************/
